--- a/_includes/head.html
+++ b/_includes/head.html
@@ -3,10 +3,14 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <title>
-
+    {% if page.title == "Home" %}
+      {{ site.title }}  {{ site.tagline }}
+    {% else %}
+      {{ page.title }}  {{ site.title }}
+    {% endif %}
   </title>
 
-  <link rel="stylesheet" href="{{ site.baseurl }}/css/styles.css">
+  <link rel="stylesheet" href="{{ site.baseurl }}/assets/main.css">
   <link rel="apple-touch-icon-precomposed" sizes="144x144" href="{{ site.baseurl }}/public/apple-touch-icon-precomposed.png">
   <link rel="shortcut icon" href="{{ site.baseurl }}/public/favicon.ico">
   <link rel="alternate" type="application/atom+xml" title="{{ site.title }}" href="{{ site.baseurl }}/atom.xml">
