--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,10 +5,24 @@
 
   <body>
 
+    <div class="container content">
+      <header class="masthead">
+        <h3 class="masthead-title">
+          <a href="{{ site.baseurl }}/" title="Home">{{ site.title }}</a>
+          <small>{{ site.tagline }}</small>
+        </h3>
+      </header>
+
+      <main>
         {{ content }}
+      </main>
+
+      <footer class="footer">
+        <small>
+          {% include foot.html %}       
+        </small>
+      </footer>
+    </div>
 
   </body>
-
-  {% include foot.html %}
-
 </html>
