--- a/_includes/foot.html
+++ b/_includes/foot.html
@@ -1,7 +1,7 @@
 <footer>
   <nav>
       <ul>
-        <li><a href="/698-Portfolio/index.html">Home</a></li>
+        <li><a href="index.html">Home</a></li>
         <li><a href="/698-Portfolio/about.html">About</a></li>
       </ul>
   </nav>
