--- a/_includes/foot.html
+++ b/_includes/foot.html
@@ -1,8 +1,8 @@
 <footer>
   <nav>
       <ul>
-        <li><a href="/698-Portfolio/index.html">Home</a></li>
-        <li><a href="/698-Portfolio/about.html">About</a></li>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="about.html">About</a></li>
       </ul>
   </nav>
   <p>Copyright &copy; Scott Kirycki<br/>kirycksc@umich.edu<br/></p>
