--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -17,11 +17,11 @@
         {{ content }}
       </main>
 
-      <footer class="footer">
-        <small>
-          {% include foot.html %}       
-        </small>
-      </footer>
+      <!-- <footer class="footer">
+        <small> -->
+          {% include foot.html %}
+        <!-- </small>
+      </footer> -->
     </div>
 
   </body>
