--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,12 +4,12 @@
   {% include head.html %}
 
   <body>
-    <nav>
+    <!-- <nav> -->
         <ul>
           <li><a href="index.html">Home</a></li>
           <li><a href="about.html">About</a></li>
         </ul>
-    </nav>
+    <!-- </nav> -->
     <div class="container content">
       <header class="masthead">
         <h3 class="masthead-title">
