--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,13 +10,13 @@
           <li><a href="about.html">About</a></li>
         </ul>
     <!-- </nav> -->
-    <div class="container content">
+    <!-- <div class="container content">
       <header class="masthead">
         <h3 class="masthead-title">
-          <!-- <a href="{{ site.baseurl }}/" title="Home">{{ site.title }}</a>
+          <a href="{{ site.baseurl }}/" title="Home">{{ site.title }}</a>
           <small>{{ site.tagline }}</small> -->
-        </h3>
-      </header>
+        <!-- </h3>
+      </header> -->
 
       <main>
         {{ content }}
