--- a/main.css
+++ b/main.css
@@ -34,7 +34,7 @@ ul, ol, dl, figure,
  * Images
  */
 img {
-  max-width: 75%;
+  max-width: 100%;
   vertical-align: middle; }
 
 /**
@@ -207,8 +207,14 @@ pre {
  * Site footer
  */
 footer {
-  border-top: 1px solid #e8e8e8;
-  padding: 30px 0; }
+  /*border-top: 1px solid #e8e8e8;
+  padding: 30px 0; */
+  display: block;
+  margin: 0 auto;
+  border: double; 1px black;
+  text-align:center;
+  padding: 2%;
+  margin: 1%; }
 
 .footer-heading {
   font-size: 18px;
