--- a/assets/main.css
+++ b/assets/main.css
@@ -209,7 +209,7 @@ pre {
 footer {
   /*border-top: 1px solid #e8e8e8;
   padding: 30px 0; */
-  display: block;
+  /*display: block;*/
   margin: 0 auto;
   border: double; 1px black;
   text-align:center;
