--- a/responsiveStyle.css
+++ b/responsiveStyle.css
@@ -110,7 +110,7 @@ font-weight: bold;}
 	border: none;
 	border-radius: 50px;
 	display:inline-block;}
-	
+
 	#left {display: inline-block;
 	width: 50%;
 	padding: 2%;
@@ -175,7 +175,7 @@ animation:animated_div 5s 3;
 50%  {transform: rotate(0deg);left:500px;}
 55%  {transform: rotate(0deg);left:500px;}
 70%  {transform: rotate(0deg);left:500px;}
-100% {transform: rotate(-360deg);left:0px;}	
+100% {transform: rotate(-360deg);left:0px;}
 }
 
 nav a{
@@ -190,7 +190,7 @@ nav a{
 #adBlock{display: none;}
 
 html {
-    background: url(background.jpg) no-repeat center fixed; 
+    background: url(background.jpg) no-repeat center fixed;
     background-size: cover;
 }
 
@@ -198,33 +198,33 @@ html {
 }
 
 @media screen and (min-width:800px){
-	
+
 	#left {display: inline-block;
 	width: 35%;
 	float: left;
 	padding-top: 2%;}
-	
+
 	#center {display: inline-block;
-	width: 35%; 
+	width: 35%;
 	padding-top: 2%;
 	float: none;}
-	
+
 	#right {display: inline-block;
 		width: 100%;
 		float: right;
 		padding-top: 2%;}
-	
-	h1::after { 
+
+	/*h1::after {
     content: " (I guess...)";
     text-transform: none;
-}
+}*/
 
 #adText {
-   
+
     -webkit-animation-name: example; /* Chrome, Safari, Opera */
     -webkit-animation-duration: 4s; /* Chrome, Safari, Opera */
-    -moz-animation-name: example; 
-    -moz-animation-duration: 4s; 
+    -moz-animation-name: example;
+    -moz-animation-duration: 4s;
     animation-name: example;
     animation-duration: 4s;
     animation-iteration-count: 5;
@@ -299,5 +299,3 @@ div.desc {
     display: table;
     clear: both;
 }
-
-
