--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,7 +5,7 @@
 
   <body>
     <!-- <nav> -->
-        <ul>
+        <ul class='ull'>
           <li><a href="index.html">Home</a></li>
           <li><a href="about.html">About</a></li>
         </ul>
